[package]
name = "raylib_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
raylib = "5.0.2"
porcino_core={git="ssh://git@github.com/MatiF100/porcino.git"}
porcino_data={git="ssh://git@github.com/MatiF100/porcino.git"}
ndarray = "0.15.6"
